# Home-project

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
b2b_marketing/: api.py  hooks.py  modules.txt
b2b_marketing/agent/desk_page/agent/: agent.json
b2b_marketing/agent/report/organization_contacts/: organization_contacts.js  organization_contacts.json  organization_contacts.py
b2b_marketing/b2b_marketing/: scheduler_events.py  terms_and_conditions.py
b2b_marketing/b2b_marketing/custom/: address.json  call_log.json  email_template.json  error_log.json  quality_goal_objective.json  quality_review.json  quality_review_objective.json  sales_invoice.json  sales_invoice_item.json  tag.json  terms_and_conditions.json  title.json
b2b_marketing/b2b_marketing/dashboard_chart/campaigns/: campaigns.json
b2b_marketing/b2b_marketing/dashboard_chart/organization/: organization.json
b2b_marketing/b2b_marketing/dashboard_chart/quality/: quality.json
b2b_marketing/b2b_marketing/dashboard_chart_source/campaigns/: campaigns.js  campaigns.json  campaigns.py
b2b_marketing/b2b_marketing/dashboard_chart_source/organization/: organization.js  organization.json  organization.py
b2b_marketing/b2b_marketing/doctype/: custom_quality_review.py
b2b_marketing/config/: agent.py  b2b_marketing.py  b2b_supervisor.py  desktop.py  docs.py  integrations.py  quality_management.py
b2b_marketing/fixtures/: custom_field.json
b2b_marketing/public/: build.json
b2b_marketing/public/js/: contact.js  contact_list.js  quality_review.js  sales_invoice.js
(+286 files in other folders)
