[project]
name = "b2b_marketing"
authors = [
    { name = "Dexciss", email = "dexciss@info.com"}
]
description = "marketing"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # Core dependencies
    "linkedin_api~=2.1.1",
    "annotated-types~=0.6.0",
    "anyio~=4.3.0",
    "certifi~=2024.2.2",
    "cffi~=1.16.0",
    "distro~=1.9.0",
    "exceptiongroup~=1.2.0",
    "h11~=0.14.0",
    "httpcore~=1.0.4",
    "httpx~=0.27.0",
    "idna~=3.6",
    "numpy~=1.26.4",
    "openai~=1.13.3",
    "sniffio~=1.3.1",
    "tqdm~=4.66.2",
    "typing_extensions~=4.10.0",
    "linkedin-api~=2.1.1",
    "timezonefinder~=6.5.0",
    "geopy~=2.4.1",



]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
hypothesis = "~=6.31.0"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
indent = "\t"
